Make Editor::replaceSelectionWithFragment() to update layout tree explicitly

This patch makes |Editor::replaceSelectionWithFragment()| to update layout
tree explicitly for preparation of crrev.com/2089993003, Get rid of
|EUpdateStyle| parameter from |isEditablePosition()|.

BUG=623005
TEST=n/a; no behavior changes

Review-Url: https://codereview.chromium.org/2099643002
Cr-Commit-Position: refs/heads/master@{#402099}

Former-commit-id: 20c47d5dabdf4e4170d53404bb93f4ca39677a46